fix: give z-index to notification wrapper
Otherwise the global message would obscure the notifications

--- a/src/main/webapp/uii/templatePG/css/src/components/_notification-area.scss
+++ b/src/main/webapp/uii/templatePG/css/src/components/_notification-area.scss
@@ -42,6 +42,7 @@
     right: 0;
     top: 100%;
     width: 40rem;
+    z-index: 1;
     .messages {
         margin-block: 0;
         margin-inline-start: 0.5em;
